fixed the css bug overflow of the cards

--- a/src/pages/MyWallet/myWallet.module.css
+++ b/src/pages/MyWallet/myWallet.module.css
@@ -3,11 +3,13 @@
   flex-direction: column;
   margin-left:2rem;
   gap:1.5rem;
+  align-items: flex-start;
 }
 
 .form{
   display: flex;
   flex-direction: column;
+  width:100%;
 }
 
 .form > p { 
